# hermes

./: .gitignore  Cargo.toml  README.md  setup.sh
.opencode/: catalog.toml
.opencode/agents/: backend-software-architect.md  opsx-code-writer.md  opsx-spec-writer.md
.opencode/command/: done.md
agents/: opsx-code-writer.md  review.md
assets/: README.md
docs/: rust-skill-installer-cli.md  sample-agents-library.md
litestar-expert/: SKILL.md
litestar-expert/references/: dto.md  requests.md  security.md  websockets.md
openspec/: config.yaml
openspec/changes/implement-hermes-cli-v1/: design.md  proposal.md  tasks.md
openspec/specs/agent-library-installation/: spec.md
openspec/specs/artifact-catalog-management/: spec.md
openspec/specs/command-library-installation/: spec.md
openspec/specs/hermes-command-surface/: spec.md
openspec/specs/interactive-artifact-selection-ui/: spec.md
openspec/specs/skill-library-installation/: spec.md
openspec/specs/user-source-config/: spec.md
pydantic-models-py/: SKILL.md
pytest-bdd-gherkin/: SKILL.md
repo/: eino.skill
repo/apply-project-agent-template/: SKILL.md
repo/eino/: SKILL.md
repo/eino/references/: chat-agents.md  end-to-end-examples.md  (+4 more)
repo/gin-gonic-expert/: SKILL.md
repo/openapi-spec-generation/: SKILL.md
repo/python-testing/: SKILL.md
repo/uv-package-manager/: SKILL.md
src/: agents.rs  app.rs  cli.rs  commands.rs  configure.rs  doctor.rs  frontmatter.rs  fs_ops.rs  hashing.rs  install.rs  main.rs  manifest.rs  models.rs  remove.rs  skills.rs  sync.rs  tui.rs  user_config.rs
(+44 files in other folders)
